# exile

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  todo.md  todo.txt
applications/exilehost/: CMakeLists.txt
applications/exilehost/exDefaultULP/: exile.ini
applications/exilehost/source/: main.cpp
source/: CMakeLists.txt
source/CriticalManagmentEngine/: CMakeLists.txt
source/cmake/: configuration.cmake  nasm.cmake  platform.cmake
source/cmake/exile/: configuration.cmake  forge.cmake  path.cmake  platform.cmake  rust.cmake
source/core/: CMakeLists.txt  README.md
source/core/include/exile/core/: API.h  array.h  array.hpp  assert.h  assertCME.h  assertNew.h  critical.h  critical.hpp  cvar.hpp  hash.h  hash.hpp  instance.hpp  memory.h  memory.hpp  module.h  nativePlugin.hpp  panic.h  path.h  plugin.hpp  pluginLoader.hpp  pluginManager.hpp  psstring.h  sharedPointer.hpp  storage.hpp  u16ToString.h  u64ToString.hpp  u8ToString.h  version.h
source/core/include/exile/core/cme/: cme.h  command.hpp  commandExecutionEngine.hpp  dump.h  dump.hpp  instance.hpp  panic.hpp  shell.hpp  shellConsole.hpp
source/core/include/exile/core/containers/: allocator.hpp  deque.hpp  function.hpp  queue.hpp  sstream.hpp  stack.hpp  string.hpp  unordered_map.hpp  vector.hpp
source/core/include/exile/core/fs/: DirectoryIterator.hpp  File.hpp  Path.hpp
source/core/include/exile/core/string/: f32ToString.h  f64ToString.h  hash.hpp  i16ToString.h  i32ToString.h  i64ToString.h  i8ToString.h  toString.hpp  u16ToString.h  u32ToString.h  u64ToString.h  u64ToString.hpp  u8ToString.h
source/core/include/exile/core/thread/: mutex.h  mutex.hpp  thread.h  thread.hpp
source/core/include/exile/core/ulp/: LogHandler.hpp  LogLevel.hpp  LogSource.hpp  UniversalLoggingProtocol.hpp  ulp.hpp
source/core/private/include/exile/core/: psstring.h
source/core/source/: CMakeLists.txt
source/core/source/centralManagmentEngine/: CMakeLists.txt
source/core/source/centralManagmentEngine/capi/: CMakeLists.txt
source/core/source/centralManagmentEngine/capi/source/: cme.cpp
source/core/source/centralManagmentEngine/commandExecutionEngine/: CMakeLists.txt
source/core/source/centralManagmentEngine/commandExecutionEngine/source/: commandExecutionEngine.cpp
source/core/source/centralManagmentEngine/instance/: CMakeLists.txt
source/core/source/centralManagmentEngine/instance/source/: instance.cpp
source/core/source/centralManagmentEngine/panic/: CMakeLists.txt
source/core/source/centralManagmentEngine/panic/source/: panic.cpp
source/core/source/centralManagmentEngine/shellConsole/: CMakeLists.txt
source/core/source/centralManagmentEngine/shellConsole/source/: shellConsole.cpp
source/core/source/languageLabaratory/: CMakeLists.txt
source/core/source/languageLabaratory/source/: CMakeLists.txt
source/core/source/languageLabaratory/source/compiler/: CMakeLists.txt
source/core/source/languageLabaratory/source/ini/: CMakeLists.txt
source/core/source/languageLabaratory/source/lexer/: CMakeLists.txt
source/core/source/stage1/: CMakeLists.txt
source/core/source/stage1/critical/: CMakeLists.txt
source/core/source/stage1/critical/source/: exFreeCriticalConfiguration.c  exLoadCriticalConfiguration.c  exSetupCriticalConfiguration.c  exSetupCriticalConfigurationFromModule.c  exSetupCriticalDefaultConfiguration.c  shared.h
source/core/source/stage1/memory/: CMakeLists.txt
source/core/source/stage1/module/: CMakeLists.txt
source/core/source/stage1/path/: CMakeLists.txt
source/core/source/stage1/version/: CMakeLists.txt
source/core/source/stage2/: CMakeLists.txt
source/core/source/stage2/PluginSystem/: CMakeLists.txt
source/core/source/stage2/cvar/: CMakeLists.txt
source/core/source/stage2/fs/: CMakeLists.txt
source/core/source/stage2/instance/: CMakeLists.txt
source/core/source/stage2/ulp/: CMakeLists.txt
source/core/source/threads/: CMakeLists.txt
source/core/source/threads/c/: CMakeLists.txt
source/core/source/threads/cpp/: CMakeLists.txt
source/defaultPanicHandler/: CMakeLists.txt
source/defaultPanicHandler/source/: main.c
source/defaultULP/: CMakeLists.txt
source/defaultULP/source/: main.cpp
source/defaultULP/source/stdout/: stdoutLogHandler.cpp  stdoutLogHandler.hpp
source/defaultULP/source/vsoutput/: vsoutputLogHandler.cpp  vsoutputLogHandler.hpp
source/forge/: CMakeLists.txt  README.md  concept2.conf  forge.conf
source/forge/kernel/: CMakeLists.txt
source/forge/kernel/source/: main.cpp
source/forge/source/: entry.cpp  main.cpp
source/forge/source/boot/: boot.c
source/forge/source/conf/: conf.c  conf.h
source/window/: CMakeLists.txt
source/window/include/exile.window/: factory.hpp  loader.h  window.h
source/window/loader/: CMakeLists.txt
source/window/loader/source/: main.cpp  symbols.cpp
source/window/source/: CMakeLists.txt  main.cpp
source/window/source/backend/: CMakeLists.txt
source/window/source/backend/wayland/: CMakeLists.txt
source/window/source/backend/x11/: CMakeLists.txt
source/window/source/cmake/: FindWayland.cmake
source/window/source/include/exile.window/: shared.h
source/window/source/platform/: CMakeLists.txt
source/window/source/platform/source/: exWindowCreate.c
tests/core/cpp/plugin/: CMakeLists.txt  exile.ini
tests/core/cpp/plugin/source/: main.cpp
tests/core/cpp/t2/: CMakeLists.txt  exile.ini
tests/core/cpp/t2/source/: main.cpp
tests/core/critical/t1/: CMakeLists.txt  critical.conf
tests/core/critical/t1/source/: main.c
tests/core/memory/t1/: CMakeLists.txt
tests/core/memory/t1/source/: main.c
tests/core/memory/t2/: CMakeLists.txt
tests/core/memory/t2/source/: main.cpp
tests/core/memory/t3/: CMakeLists.txt
tests/core/memory/t3/source/: main.cpp
tests/core/version/t1/: CMakeLists.txt
tests/core/version/t1/source/: main.c
tests/forge/t1/: CMakeLists.txt
tests/forge/t1/exDefaultULP/: exile.ini
tests/forge/t1/source/: main.cpp
tests/window/t1/: CMakeLists.txt
tests/window/t1/exile.window/: exile.ini
tests/window/t1/source/: main.cpp
(+116 files in other folders)
